VBTN-47 fix text-align

--- a/src/components/idpSelection/idpDialog.scss
+++ b/src/components/idpSelection/idpDialog.scss
@@ -51,6 +51,7 @@
 }
 
 .idp-button-label {
+    text-align: center;
     position: absolute;
     left: 50%;
     top: 50%;
